--- a/notebooks/einops.ipynb
+++ b/notebooks/einops.ipynb
@@ -9,8 +9,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home3/ebrahim/miniconda3/envs/speech-bci/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "/home2/ebrahim/miniconda3/envs/llm_brain/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/home2/ebrahim/miniconda3/envs/llm_brain/lib/python3.11/site-packages/transformers/utils/generic.py:441: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
+      "  _torch_pytree._register_pytree_node(\n"
      ]
     }
    ],
@@ -42,6 +44,17 @@
     "    # Unfold the time dimension (dim=1) using torch.nn.functional.unfold logic\n",
     "    x = x.unfold(dimension=1, size=chunk_size, step=stride)  # (B, M, chunk_size, C)\n",
     "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "     \n",
+    "X = torch.arange(4).unsqueeze(0).unsqueeze(0).float()\n",
+    "X+=torch.randn([1, 1, 4], device='cpu')\n"
    ]
   },
   {
@@ -191,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
