--- a/notebooks/spec_aug.ipynb
+++ b/notebooks/spec_aug.ipynb
@@ -2,19 +2,71 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "shape mismatch: indexing tensors could not be broadcast together with shapes [4], [4, 12]",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 62\u001b[0m\n\u001b[1;32m     59\u001b[0m specaug \u001b[39m=\u001b[39m DummySpecAug(mask_token\u001b[39m=\u001b[39mmask_token, patch_height\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m, max_mask_pct\u001b[39m=\u001b[39m\u001b[39m0.3\u001b[39m)\n\u001b[1;32m     61\u001b[0m \u001b[39m# Apply\u001b[39;00m\n\u001b[0;32m---> 62\u001b[0m X_masked, mask \u001b[39m=\u001b[39m specaug\u001b[39m.\u001b[39;49mapply_specaugment_mask(X, X_len, num_masks\u001b[39m=\u001b[39;49m\u001b[39m2\u001b[39;49m)\n\u001b[1;32m     64\u001b[0m \u001b[39m# --------------------------\u001b[39;00m\n\u001b[1;32m     65\u001b[0m \u001b[39m# Inspect the result\u001b[39;00m\n\u001b[1;32m     66\u001b[0m \u001b[39mfor\u001b[39;00m b \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(B):\n",
-      "Cell \u001b[0;32mIn[2], line 43\u001b[0m, in \u001b[0;36mDummySpecAug.apply_specaugment_mask\u001b[0;34m(self, X, X_len, num_masks)\u001b[0m\n\u001b[1;32m     41\u001b[0m batch_idx \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39marange(B, device\u001b[39m=\u001b[39mdevice)\u001b[39m.\u001b[39mrepeat_interleave(num_masks)\n\u001b[1;32m     42\u001b[0m mask \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mzeros(B, P, dtype\u001b[39m=\u001b[39mtorch\u001b[39m.\u001b[39mbool, device\u001b[39m=\u001b[39mdevice)\n\u001b[0;32m---> 43\u001b[0m mask \u001b[39m=\u001b[39m mask\u001b[39m.\u001b[39;49mindex_put((batch_idx, arange\u001b[39m.\u001b[39;49mexpand(B_rep, \u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m)), mask_chunks, accumulate\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n\u001b[1;32m     45\u001b[0m \u001b[39m# Apply mask token\u001b[39;00m\n\u001b[1;32m     46\u001b[0m X_masked \u001b[39m=\u001b[39m X\u001b[39m.\u001b[39mclone()\n",
-      "\u001b[0;31mIndexError\u001b[0m: shape mismatch: indexing tensors could not be broadcast together with shapes [4], [4, 12]"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Sample 0:\n",
+      "Original:\n",
+      "tensor([[-1.5667, -0.8848, -0.0823, -1.0963],\n",
+      "        [-0.2630, -1.9768, -1.0156,  1.9896],\n",
+      "        [-0.4240,  0.9485, -2.6145, -1.4046],\n",
+      "        [ 0.6807,  0.2921, -0.8919,  1.0357],\n",
+      "        [-0.3071,  0.4782, -0.0400,  0.0223],\n",
+      "        [-0.0794, -0.3305,  0.8095, -1.4395],\n",
+      "        [ 0.2538, -0.8903,  0.3576, -0.7388],\n",
+      "        [-1.0737,  0.1499, -0.8428,  0.6036],\n",
+      "        [ 2.2194,  1.8892, -0.3977, -0.5240],\n",
+      "        [ 0.2136, -0.3794, -1.0174,  1.5791],\n",
+      "        [-0.7023,  0.5966,  0.8818,  0.3092],\n",
+      "        [-1.2846,  0.4203, -2.1773,  0.3069]])\n",
+      "Masked:\n",
+      "tensor([[-9.9000e+01, -9.9000e+01, -9.9000e+01, -9.9000e+01],\n",
+      "        [-9.9000e+01, -9.9000e+01, -9.9000e+01, -9.9000e+01],\n",
+      "        [-9.9000e+01, -9.9000e+01, -9.9000e+01, -9.9000e+01],\n",
+      "        [ 6.8074e-01,  2.9214e-01, -8.9190e-01,  1.0357e+00],\n",
+      "        [-3.0712e-01,  4.7820e-01, -4.0047e-02,  2.2303e-02],\n",
+      "        [-7.9409e-02, -3.3050e-01,  8.0954e-01, -1.4395e+00],\n",
+      "        [ 2.5378e-01, -8.9029e-01,  3.5758e-01, -7.3885e-01],\n",
+      "        [-1.0737e+00,  1.4991e-01, -8.4285e-01,  6.0360e-01],\n",
+      "        [-9.9000e+01, -9.9000e+01, -9.9000e+01, -9.9000e+01],\n",
+      "        [-9.9000e+01, -9.9000e+01, -9.9000e+01, -9.9000e+01],\n",
+      "        [-9.9000e+01, -9.9000e+01, -9.9000e+01, -9.9000e+01],\n",
+      "        [-1.2846e+00,  4.2026e-01, -2.1773e+00,  3.0694e-01]])\n",
+      "Mask positions: [0, 1, 2, 8, 9, 10]\n",
+      "\n",
+      "Sample 1:\n",
+      "Original:\n",
+      "tensor([[-0.9034,  0.5856,  1.4360,  1.5973],\n",
+      "        [-1.3649, -1.2709,  0.1486, -0.5789],\n",
+      "        [-0.5987, -1.2989,  1.6562, -2.2106],\n",
+      "        [-1.0345,  0.3012, -1.0185,  0.3474],\n",
+      "        [ 1.1421, -0.0552, -1.9057,  0.8582],\n",
+      "        [ 0.4565, -0.5931,  0.1846,  0.3480],\n",
+      "        [ 0.4704,  0.1593, -1.6408, -0.3704],\n",
+      "        [-0.3444, -0.0763,  0.2898, -0.8294],\n",
+      "        [ 2.0255, -0.7030,  0.0207, -0.4025],\n",
+      "        [-0.6412, -2.1793,  0.9652, -0.7101],\n",
+      "        [-0.2891,  0.7326,  0.0354, -1.6045],\n",
+      "        [ 0.1476, -0.1946,  0.1133,  1.7815]])\n",
+      "Masked:\n",
+      "tensor([[-9.0343e-01,  5.8557e-01,  1.4360e+00,  1.5973e+00],\n",
+      "        [-1.3649e+00, -1.2709e+00,  1.4857e-01, -5.7889e-01],\n",
+      "        [-9.9000e+01, -9.9000e+01, -9.9000e+01, -9.9000e+01],\n",
+      "        [-9.9000e+01, -9.9000e+01, -9.9000e+01, -9.9000e+01],\n",
+      "        [ 1.1421e+00, -5.5213e-02, -1.9057e+00,  8.5823e-01],\n",
+      "        [ 4.5653e-01, -5.9313e-01,  1.8457e-01,  3.4795e-01],\n",
+      "        [ 4.7040e-01,  1.5928e-01, -1.6408e+00, -3.7044e-01],\n",
+      "        [-9.9000e+01, -9.9000e+01, -9.9000e+01, -9.9000e+01],\n",
+      "        [-9.9000e+01, -9.9000e+01, -9.9000e+01, -9.9000e+01],\n",
+      "        [-9.9000e+01, -9.9000e+01, -9.9000e+01, -9.9000e+01],\n",
+      "        [-2.8914e-01,  7.3263e-01,  3.5388e-02, -1.6045e+00],\n",
+      "        [ 1.4765e-01, -1.9457e-01,  1.1326e-01,  1.7815e+00]])\n",
+      "Mask positions: [2, 3, 7, 8, 9]\n"
      ]
     }
    ],
