--- a/notebooks/formatCompetitionData.ipynb
+++ b/notebooks/formatCompetitionData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "4316910d",
    "metadata": {},
    "outputs": [
@@ -10,31 +10,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home3/skaasyap/willett/competitionData/\n",
-      "/home3/skaasyap/willett/data_log_both\n"
+      "/data/willett_data/competitionData/ /data/willett_data/ptDecoder_ctc_both\n"
      ]
     }
    ],
    "source": [
-    "dataDir_paths = ['/home3/skaasyap/willett/competitionData/']\n",
-    "dataSave_paths = ['/home3/skaasyap/willett/data', \n",
-    "                '/home3/skaasyap/willett/data_log_both']\n",
+    "server = 'obi'\n",
+    "logBoth = False\n",
     "\n",
-    "dataDir = dataDir_paths[0]\n",
-    "logBoth = True\n",
+    "if server == 'obi':\n",
+    "    dataDir = '/data/willett_data/competitionData/'\n",
+    "    if logBoth:\n",
+    "        dataSave = '/data/willett_data/ptDecoder_ctc_both'\n",
+    "    else:\n",
+    "        dataSave = '/data/willett_data/ptDecoder_ctc'\n",
+    "        \n",
+    "elif server == 'leia':\n",
+    "    dataDir = '/home3/skaasyap/willett/competitionData/'\n",
+    "    if logBoth:\n",
+    "        dataSave = '/home3/skaasyap/willett/data_log_both'\n",
+    "    else:\n",
+    "        dataSave = '/home3/skaasyap/willett/data'\n",
     "\n",
-    "if logBoth:\n",
-    "    dataSave = dataSave_paths[-1]\n",
-    "else:\n",
-    "    dataSave = dataDir_paths[0]\n",
-    "    \n",
-    "print(dataDir)\n",
-    "print(dataSave)"
+    "print(dataDir, dataSave)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "d1f89411",
    "metadata": {},
    "outputs": [
@@ -43,7 +46,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package averaged_perceptron_tagger_eng to\n",
-      "[nltk_data]     /home3/ebrahim/nltk_data...\n",
+      "[nltk_data]     /home3/ebrahim2/nltk_data...\n",
       "[nltk_data]   Package averaged_perceptron_tagger_eng is already up-to-\n",
       "[nltk_data]       date!\n"
      ]
@@ -54,7 +57,7 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "0b6cc836",
    "metadata": {},
    "outputs": [],
@@ -81,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "edb2175e",
    "metadata": {},
    "outputs": [],
@@ -109,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "e6305c7d",
    "metadata": {},
    "outputs": [],
@@ -168,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "20398fe1",
    "metadata": {},
    "outputs": [],
@@ -235,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "1cf55fa2",
    "metadata": {},
    "outputs": [],
@@ -298,32 +301,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "815eca0e",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "PermissionError",
-     "evalue": "[Errno 13] Permission denied: '/data/willett_data/competitionData//train/t12.2022.04.28.mat'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
-      "File \u001b[0;32m~/miniconda3/envs/speech-bci/lib/python3.9/site-packages/scipy/io/matlab/_mio.py:39\u001b[0m, in \u001b[0;36m_open_file\u001b[0;34m(file_like, appendmat, mode)\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m---> 39\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mopen\u001b[39;49m(file_like, mode), \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m     40\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mOSError\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m     41\u001b[0m     \u001b[39m# Probably \"not found\"\u001b[39;00m\n",
-      "\u001b[0;31mPermissionError\u001b[0m: [Errno 13] Permission denied: '/data/willett_data/competitionData//train/t12.2022.04.28.mat'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 7\u001b[0m\n\u001b[1;32m      3\u001b[0m competitionDatasets \u001b[39m=\u001b[39m []\n\u001b[1;32m      6\u001b[0m \u001b[39mfor\u001b[39;00m dayIdx \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(sessionNames)):\n\u001b[0;32m----> 7\u001b[0m     trainDataset \u001b[39m=\u001b[39m getDataset(dataDir \u001b[39m+\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39m/train/\u001b[39;49m\u001b[39m'\u001b[39;49m \u001b[39m+\u001b[39;49m sessionNames[dayIdx] \u001b[39m+\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39m.mat\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m      8\u001b[0m     testDataset \u001b[39m=\u001b[39m getDataset(dataDir \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/test/\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m sessionNames[dayIdx] \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m.mat\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     10\u001b[0m     trainDatasets\u001b[39m.\u001b[39mappend(trainDataset)\n",
-      "Cell \u001b[0;32mIn[8], line 4\u001b[0m, in \u001b[0;36mgetDataset\u001b[0;34m(fileName)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39mdef\u001b[39;00m\u001b[39m \u001b[39m\u001b[39mgetDataset\u001b[39m(fileName):\n\u001b[0;32m----> 4\u001b[0m     session_data \u001b[39m=\u001b[39m loadFeaturesAndNormalize(fileName)\n\u001b[1;32m      6\u001b[0m     allDat \u001b[39m=\u001b[39m []\n\u001b[1;32m      7\u001b[0m     trueSentences \u001b[39m=\u001b[39m []\n",
-      "Cell \u001b[0;32mIn[7], line 5\u001b[0m, in \u001b[0;36mloadFeaturesAndNormalize\u001b[0;34m(sessionPath, logPower, logBoth)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39mdef\u001b[39;00m\u001b[39m \u001b[39m\u001b[39mloadFeaturesAndNormalize\u001b[39m(sessionPath, logPower\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, logBoth\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m):\n\u001b[0;32m----> 5\u001b[0m     dat \u001b[39m=\u001b[39m scipy\u001b[39m.\u001b[39;49mio\u001b[39m.\u001b[39;49mloadmat(sessionPath)\n\u001b[1;32m      7\u001b[0m     input_features \u001b[39m=\u001b[39m []\n\u001b[1;32m      8\u001b[0m     transcriptions \u001b[39m=\u001b[39m []\n",
-      "File \u001b[0;32m~/miniconda3/envs/speech-bci/lib/python3.9/site-packages/scipy/io/matlab/_mio.py:225\u001b[0m, in \u001b[0;36mloadmat\u001b[0;34m(file_name, mdict, appendmat, **kwargs)\u001b[0m\n\u001b[1;32m     88\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     89\u001b[0m \u001b[39mLoad MATLAB file.\u001b[39;00m\n\u001b[1;32m     90\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    222\u001b[0m \u001b[39m    3.14159265+3.14159265j])\u001b[39;00m\n\u001b[1;32m    223\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    224\u001b[0m variable_names \u001b[39m=\u001b[39m kwargs\u001b[39m.\u001b[39mpop(\u001b[39m'\u001b[39m\u001b[39mvariable_names\u001b[39m\u001b[39m'\u001b[39m, \u001b[39mNone\u001b[39;00m)\n\u001b[0;32m--> 225\u001b[0m \u001b[39mwith\u001b[39;00m _open_file_context(file_name, appendmat) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m    226\u001b[0m     MR, _ \u001b[39m=\u001b[39m mat_reader_factory(f, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[1;32m    227\u001b[0m     matfile_dict \u001b[39m=\u001b[39m MR\u001b[39m.\u001b[39mget_variables(variable_names)\n",
-      "File \u001b[0;32m~/miniconda3/envs/speech-bci/lib/python3.9/contextlib.py:119\u001b[0m, in \u001b[0;36m_GeneratorContextManager.__enter__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    117\u001b[0m \u001b[39mdel\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39margs, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mkwds, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfunc\n\u001b[1;32m    118\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 119\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mnext\u001b[39;49m(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mgen)\n\u001b[1;32m    120\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mStopIteration\u001b[39;00m:\n\u001b[1;32m    121\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mgenerator didn\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt yield\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mfrom\u001b[39;00m\u001b[39m \u001b[39m\u001b[39mNone\u001b[39;00m\n",
-      "File \u001b[0;32m~/miniconda3/envs/speech-bci/lib/python3.9/site-packages/scipy/io/matlab/_mio.py:17\u001b[0m, in \u001b[0;36m_open_file_context\u001b[0;34m(file_like, appendmat, mode)\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[39m@contextmanager\u001b[39m\n\u001b[1;32m     16\u001b[0m \u001b[39mdef\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m_open_file_context\u001b[39m(file_like, appendmat, mode\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[0;32m---> 17\u001b[0m     f, opened \u001b[39m=\u001b[39m _open_file(file_like, appendmat, mode)\n\u001b[1;32m     18\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m     19\u001b[0m         \u001b[39myield\u001b[39;00m f\n",
-      "File \u001b[0;32m~/miniconda3/envs/speech-bci/lib/python3.9/site-packages/scipy/io/matlab/_mio.py:45\u001b[0m, in \u001b[0;36m_open_file\u001b[0;34m(file_like, appendmat, mode)\u001b[0m\n\u001b[1;32m     43\u001b[0m     \u001b[39mif\u001b[39;00m appendmat \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m file_like\u001b[39m.\u001b[39mendswith(\u001b[39m'\u001b[39m\u001b[39m.mat\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[1;32m     44\u001b[0m         file_like \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m.mat\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m---> 45\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mopen\u001b[39;49m(file_like, mode), \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m     46\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     47\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mOSError\u001b[39;00m(\n\u001b[1;32m     48\u001b[0m         \u001b[39m'\u001b[39m\u001b[39mReader needs file name or open file-like object\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m     49\u001b[0m     ) \u001b[39mfrom\u001b[39;00m\u001b[39m \u001b[39m\u001b[39me\u001b[39;00m\n",
-      "\u001b[0;31mPermissionError\u001b[0m: [Errno 13] Permission denied: '/data/willett_data/competitionData//train/t12.2022.04.28.mat'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "trainDatasets = []\n",
     "testDatasets = []\n",
@@ -344,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "de32e23e",
    "metadata": {},
    "outputs": [
@@ -366,7 +347,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 25,
+   "id": "d5e86fa8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/data/willett_data/ptDecoder_ctc_both\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dataSave)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "80014502",
    "metadata": {},
    "outputs": [],
@@ -384,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 27,
    "id": "f1f86321",
    "metadata": {},
    "outputs": [
@@ -394,7 +393,7 @@
        "1.0282907"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 29,
    "id": "37b00cb5",
    "metadata": {},
    "outputs": [
@@ -447,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "id": "6bc86d8c",
    "metadata": {},
    "outputs": [],
@@ -475,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "id": "41cb63b5",
    "metadata": {},
    "outputs": [
@@ -508,35 +507,23 @@
     "        print(f\"Placing {sessionNames[dayIdx]} in test/comp\")\n",
     "        \n",
     "        # put both train and test data for held-out days into \"test (really val)\".\n",
-    "        testDataset1 = getDataset(dataDir + '/train/' + sessionNames[dayIdx] + '.mat')\n",
-    "        testDataset2 = getDataset(dataDir + '/test/' + sessionNames[dayIdx] + '.mat')\n",
+    "        testDataset1 = getDataset(dataDir + '/train/' + sessionNames[dayIdx] + '.mat', logBoth)\n",
+    "        testDataset2 = getDataset(dataDir + '/test/' + sessionNames[dayIdx] + '.mat', logBoth)\n",
     "        testDataset = combine_dicts(testDataset1, testDataset2)\n",
     "        testDatasets.append(testDataset)\n",
     "        \n",
     "        # only testing on these held-out days now. \n",
     "        if os.path.exists(dataDir + '/competitionHoldOut/' + sessionNames[dayIdx] + '.mat'):\n",
-    "            dataset = getDataset(dataDir + '/competitionHoldOut/' + sessionNames[dayIdx] + '.mat')\n",
+    "            dataset = getDataset(dataDir + '/competitionHoldOut/' + sessionNames[dayIdx] + '.mat', logBoth)\n",
     "            competitionDatasets.append(dataset)\n",
     "            \n",
     "    else:\n",
     "        \n",
     "        # put both train and test data for non held-out days into train\n",
-    "        trainDataset1 = getDataset(dataDir + '/train/' + sessionNames[dayIdx] + '.mat')\n",
-    "        trainDataset2 = getDataset(dataDir + '/test/' + sessionNames[dayIdx] + '.mat')\n",
+    "        trainDataset1 = getDataset(dataDir + '/train/' + sessionNames[dayIdx] + '.mat', logBoth)\n",
+    "        trainDataset2 = getDataset(dataDir + '/test/' + sessionNames[dayIdx] + '.mat', logBoth)\n",
     "        trainDataset = combine_dicts(trainDataset1, trainDataset2)\n",
     "        trainDatasets.append(trainDataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "7168acfd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = float('inf')\n",
-    "if a < 0.15 + 0.01:\n",
-    "    print('hi')"
    ]
   },
   {
@@ -590,17 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "0b05f28a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "combinedDict = combine_dicts(trainDataset1, trainDataset2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "id": "0bc78a3f",
    "metadata": {},
    "outputs": [
@@ -608,7 +585,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/data/willett_data/ptDecoder_ctc\n"
+      "/data/willett_data/ptDecoder_ctc_both\n"
      ]
     }
    ],
@@ -618,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "id": "37ee0af5",
    "metadata": {},
    "outputs": [],
@@ -633,14 +610,6 @@
     "with open(dataSave_held_out_days, 'wb') as handle:\n",
     "    pickle.dump(allDatasets, handle)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cab3d9a7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
