--- a/notebooks/formatCompetitionData.ipynb
+++ b/notebooks/formatCompetitionData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "4316910d",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "d1f89411",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "79569a03",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m\u001b[39m \u001b[39m\u001b[39mpickle\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39mif\u001b[39;00m server \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mleia\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m----> 5\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39m/home3/skaasyap/willett/data\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m      6\u001b[0m         data \u001b[39m=\u001b[39m pickle\u001b[39m.\u001b[39mload(f)\n\u001b[1;32m      7\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m/home3/skaasyap/willett/data_held_out_days\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n",
+      "Cell \u001b[0;32mIn[10], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m\u001b[39m \u001b[39m\u001b[39mpickle\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39mif\u001b[39;00m server \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mleia\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m----> 5\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39m/home3/skaasyap/willett/data\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m      6\u001b[0m         data \u001b[39m=\u001b[39m pickle\u001b[39m.\u001b[39mload(f)\n\u001b[1;32m      7\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m/home3/skaasyap/willett/data_held_out_days\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n",
       "File \u001b[0;32m~/miniconda3/envs/speech-bci/lib/python3.9/site-packages/IPython/core/interactiveshell.py:310\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    303\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[1;32m    304\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    305\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    306\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    307\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    308\u001b[0m     )\n\u001b[0;32m--> 310\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
       "\u001b[0;31mPermissionError\u001b[0m: [Errno 13] Permission denied: '/home3/skaasyap/willett/data'"
      ]
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "0b6cc836",
    "metadata": {},
    "outputs": [],
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "id": "dba68931",
    "metadata": {},
    "outputs": [
@@ -590,61 +590,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 []\n",
-      "1 []\n",
-      "2 []\n",
-      "3 []\n",
-      "4 []\n",
-      "5 []\n",
-      "6 []\n",
-      "7 []\n",
-      "8 []\n",
-      "9 []\n",
-      "10 []\n",
-      "11 []\n",
-      "12 []\n",
-      "13 []\n",
-      "14 []\n",
-      "15 []\n",
-      "16 []\n",
-      "17 []\n",
-      "18 []\n",
-      "19 []\n",
-      "20 []\n",
-      "21 []\n",
-      "22 []\n",
-      "23 []\n"
+      "[15]\n",
+      "[16]\n",
+      "[18]\n",
+      "[19]\n",
+      "[20]\n",
+      "[17]\n",
+      "[14]\n",
+      "[13]\n",
+      "[12]\n",
+      "[11]\n",
+      "[10]\n",
+      "[9]\n",
+      "[8]\n",
+      "[7]\n",
+      "[6]\n",
+      "[5]\n",
+      "[4]\n",
+      "[3]\n",
+      "[2]\n",
+      "[1]\n",
+      "[0]\n"
      ]
     }
    ],
    "source": [
+    "import numpy as np\n",
     "evaluation_days = ['07.21', '07.27', '08.02', \n",
     "                 '08.11', '08.13', '07.29', '07.14', '07.05', '06.28', '06.23', '06.21', '06.16', \n",
     "                 '06.14', '06.07', '06.02', '05.26', '05.24', '05.19', '05.17', '05.05', '04.28']\n",
     "\n",
+    "sessionNames_days = np.array([x[-5:] for x in sessionNames])\n",
     "# skipping the last 3 days because they are not historical data. \n",
-    "for dayIdx in range(len(sessionNames)):\n",
+    "for eval_day in evaluation_days:\n",
     "    \n",
-    "    print(dayIdx, np.argwhere(sessionNames[dayIdx][-5:]==evaluation_days))\n",
+    "    print(np.argwhere(eval_day==sessionNames_days)[0])\n",
     "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "0bc78a3f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/data/willett_data/ptDecoder_ctc_both\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(dataSave)"
    ]
   },
   {
