--- a/notebooks/formatCompetitionData.ipynb
+++ b/notebooks/formatCompetitionData.ipynb
@@ -69,20 +69,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "79569a03",
    "metadata": {},
    "outputs": [
     {
-     "ename": "PermissionError",
-     "evalue": "[Errno 13] Permission denied: '/home3/skaasyap/willett/data'",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0714295 0.09158699\n",
+      "1.0356277 0.094650164\n",
+      "0.98542196 -0.025719501\n",
+      "0.9905926 -0.027190348\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'data_held_out' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m\u001b[39m \u001b[39m\u001b[39mpickle\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39mif\u001b[39;00m server \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mleia\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m----> 5\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39m/home3/skaasyap/willett/data\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m      6\u001b[0m         data \u001b[39m=\u001b[39m pickle\u001b[39m.\u001b[39mload(f)\n\u001b[1;32m      7\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m/home3/skaasyap/willett/data_held_out_days\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n",
-      "File \u001b[0;32m~/miniconda3/envs/speech-bci/lib/python3.9/site-packages/IPython/core/interactiveshell.py:310\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    303\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[1;32m    304\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    305\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    306\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    307\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    308\u001b[0m     )\n\u001b[0;32m--> 310\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "\u001b[0;31mPermissionError\u001b[0m: [Errno 13] Permission denied: '/home3/skaasyap/willett/data'"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 30\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[39mprint\u001b[39m(data[\u001b[39m'\u001b[39m\u001b[39mtrain\u001b[39m\u001b[39m'\u001b[39m][i][\u001b[39m'\u001b[39m\u001b[39msentenceDat\u001b[39m\u001b[39m'\u001b[39m][i]\u001b[39m.\u001b[39mstd(), data[\u001b[39m'\u001b[39m\u001b[39mtrain\u001b[39m\u001b[39m'\u001b[39m][i][\u001b[39m'\u001b[39m\u001b[39msentenceDat\u001b[39m\u001b[39m'\u001b[39m][i]\u001b[39m.\u001b[39mmean())\n\u001b[1;32m     29\u001b[0m \u001b[39mprint\u001b[39m(data_logged[\u001b[39m'\u001b[39m\u001b[39mtrain\u001b[39m\u001b[39m'\u001b[39m][i][\u001b[39m'\u001b[39m\u001b[39msentenceDat\u001b[39m\u001b[39m'\u001b[39m][i]\u001b[39m.\u001b[39mstd(), data_logged[\u001b[39m'\u001b[39m\u001b[39mtrain\u001b[39m\u001b[39m'\u001b[39m][i][\u001b[39m'\u001b[39m\u001b[39msentenceDat\u001b[39m\u001b[39m'\u001b[39m][i]\u001b[39m.\u001b[39mmean())\n\u001b[0;32m---> 30\u001b[0m \u001b[39mprint\u001b[39m(data_held_out[\u001b[39m'\u001b[39m\u001b[39mtrain\u001b[39m\u001b[39m'\u001b[39m][i][\u001b[39m'\u001b[39m\u001b[39msentenceDat\u001b[39m\u001b[39m'\u001b[39m][i]\u001b[39m.\u001b[39mstd(), data[\u001b[39m'\u001b[39m\u001b[39mtrain\u001b[39m\u001b[39m'\u001b[39m][i][\u001b[39m'\u001b[39m\u001b[39msentenceDat\u001b[39m\u001b[39m'\u001b[39m][i]\u001b[39m.\u001b[39mmean())\n\u001b[1;32m     31\u001b[0m \u001b[39mprint\u001b[39m(data_logged_held_out[\u001b[39m'\u001b[39m\u001b[39mtrain\u001b[39m\u001b[39m'\u001b[39m][i][\u001b[39m'\u001b[39m\u001b[39msentenceDat\u001b[39m\u001b[39m'\u001b[39m][i]\u001b[39m.\u001b[39mstd(), data_logged[\u001b[39m'\u001b[39m\u001b[39mtrain\u001b[39m\u001b[39m'\u001b[39m][i][\u001b[39m'\u001b[39m\u001b[39msentenceDat\u001b[39m\u001b[39m'\u001b[39m][i]\u001b[39m.\u001b[39mmean())\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data_held_out' is not defined"
      ]
     }
    ],
@@ -93,8 +102,8 @@
     "    \n",
     "    with open('/home3/skaasyap/willett/data', 'rb') as f:\n",
     "        data = pickle.load(f)\n",
-    "    with open('/home3/skaasyap/willett/data_held_out_days', 'rb') as f:\n",
-    "        data_held_out = pickle.load(f)\n",
+    "    #with open('/home3/skaasyap/willett/data_held_out_days', 'rb') as f:\n",
+    "    #    data_held_out = pickle.load(f)\n",
     "    with open('/home3/skaasyap/willett/data_log_both', 'rb') as f:\n",
     "        data_logged = pickle.load(f)\n",
     "    with open('/home3/skaasyap/willett/data_log_both_held_out_days', 'rb') as f:\n",
@@ -113,11 +122,11 @@
     "    with open('/data/willett_data/ptDecoder_ctc_both_held_out_days', 'rb') as f:\n",
     "        data_logged_held_out = pickle.load(f)\n",
     "        \n",
-    "i = 10\n",
-    "print(data['train'][i]['sentenceDat'][i].std(), data['train'][i]['sentenceDat'][i].mean())\n",
-    "print(data_logged['train'][i]['sentenceDat'][i].std(), data_logged['train'][i]['sentenceDat'][i].mean())\n",
-    "print(data_held_out['train'][i]['sentenceDat'][i].std(), data['train'][i]['sentenceDat'][i].mean())\n",
-    "print(data_logged_held_out['train'][i]['sentenceDat'][i].std(), data_logged['train'][i]['sentenceDat'][i].mean())\n",
+    "#i = 10\n",
+    "#print(data['train'][i]['sentenceDat'][i].std(), data['train'][i]['sentenceDat'][i].mean())\n",
+    "#print(data_logged['train'][i]['sentenceDat'][i].std(), data_logged['train'][i]['sentenceDat'][i].mean())\n",
+    "#print(data_held_out['train'][i]['sentenceDat'][i].std(), data['train'][i]['sentenceDat'][i].mean())\n",
+    "#print(data_logged_held_out['train'][i]['sentenceDat'][i].std(), data_logged['train'][i]['sentenceDat'][i].mean())\n",
     "\n"
    ]
   },
